--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,27 @@
+{% extends 'base.html' %}
+
 {% load socialaccount %}
-<html>
-<body>
-<h1>My Google OAuth Project </h1>
+{% block title %}Login{% endblock title %}
+
+
+{% block body %}
+
+<h1> Profile </h1>
 {% if user.is_authenticated %}
   <p>Welcome, You are logged in as {{ user.username }}</p>
+
+<div class="card" style="width: 18rem;">
+  <img src="https://source.unsplash.com/1600x600/?vegetable/onion" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{user.email}}</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
 
 {% else %}
   <a href="{% provider_login_url 'google' %}">Login With Google</a>
 {% endif %}
-</body>
-</html>
+
+
+{% endblock body %}
