--- a/templates/sellVeg.html
+++ b/templates/sellVeg.html
@@ -8,9 +8,9 @@
 {% csrf_token %}
   <div class="col-md-12">
     <select class="form-select" name="name" aria-label="Default select example">
-    <option value="onion">Onion</option>
-    <option value="tomato">Tomato</option>
-    <option value="lettuce">Lettuce</option>
+    <option value="Onion">Onion</option>
+    <option value="Tomato">Tomato</option>
+    <option value="Lettuce">Lettuce</option>
   </select>
   </div>
   <div class="col-md-12">
