--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <img src="https://source.unsplash.com/1600x600/?vegetables/{{product.name}}" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">{{product.name}}</p>
-        <p class="card-text">{{product.price}}</p>
+        <p class="card-text">₹{{product.price}}</p>
       <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
               <a href="productView/{{product.id}}" class="btn btn-primary">View</a>
