--- a/templates/productView.html
+++ b/templates/productView.html
@@ -3,20 +3,31 @@
 {% block title %}Product{% endblock title %}
 
 {% block body %}
-<div class="card mb-3" style="min-height:100%; background:yellow;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://source.unsplash.com/1600x1000/?vegetables/{{product.name}}" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{product.name}}</h5>
-        <h5 class="card-title">{{product.email}}</h5>
-        <p class="card-text">{{product.price}}</p>
-        <p class="card-text">{{product.addr}}</p>
-        <p class="card-text"><small class="text-muted">{{product.zip}}</small></p>
+
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="https://source.unsplash.com/1600x1000/?vegetables/{{product.name}}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-3">{{product.name}}</h1>
+        <p class="lead">₹{{product.price}}</p>
+        <div class="card mb-3">
+          <div class="card-header">
+            Seller's Contact:
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">{{product.email}}</h5>
+            <p class="card-text">{{product.addr}}, {{product.addr1}},{{product.city}},{{product.state}},{{product.zip}},
+            </p>
+          </div>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Buy</button>
+
+        </div>
       </div>
     </div>
   </div>
-</div>
+
 {% endblock body %}
